--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <!-- Два різних посилання по завданню
       -->
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css" />
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css"
+/>
 
-      <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+  rel="stylesheet"
+/>
+
+<link rel="stylesheet" href="./css/styles.css" />
+
     </head>
 
     <body>
